feat: Implement direct command execution for robot actions using new shell scripts and a C executor, integrating it into the main STT application.

--- a/STT/vosk-stt-fr/Makefile
+++ b/STT/vosk-stt-fr/Makefile
@@ -4,7 +4,7 @@ LDFLAGS = -L./vosk-api/src -lvosk -lportaudio -Wl,-rpath=./vosk-api/src
 
 all: stt_app
 
-stt_app: main.o command_parser.o llm_client.o
+stt_app: main.o command_parser.o llm_client.o command_executor.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 main.o: main.c
@@ -14,6 +14,9 @@ command_parser.o: command_parser.c
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 llm_client.o: llm_client.c
+	$(CC) -c -o $@ $< $(CFLAGS)
+
+command_executor.o: command_executor.c
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 clean:
